--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3.2"
 services:
   node:
-    image: shrink/node:8.4
+    image: node:8.4
     links:
       - testrpc:testrpc
-      - geth:geth
     volumes:
       - ./truffle:/usr/src/app
     environment:
       - RPC_HOST=testrpc
-      - TESTNET_HOST=geth
+    working_dir: /usr/src/app
 
   testrpc:
     image: shrink/testrpc:4.1
@@ -21,17 +20,5 @@ services:
       "--account", "0xb04f51207b7799ee672c5af2fdaf28e76e43565b3211d0d3cdf49da8bd09e3dc,9000000000000000000000",
       "--unlock", "0x3cA21ae5E2e926D8Be6F6006604828ED5b8953D7",
       "--account", "0xb04f51207b7799ee672c5af2fdaf28e76e43565b3211d0d3cdf49da8bd09e3dd,9000000000000000000000",
+      "--account", "0x2bdd21761a483f71054e14f5b827213567971c676928d9a1808cbfa4b7501200,9000000000000000000000",
     ]
-
-  geth:
-    image: ethereum/client-go:alpine
-    command: [
-      "--${ETHEREUM_NETWORK}",
-      "--datadir=/usr/ethereum",
-      "--rpc",
-      "--rpcapi=personal,eth,net,web3",
-      "--rpcaddr=0.0.0.0",
-      "--rpccorsdomain=*"
-    ]
-    volumes:
-      - ${GETH_DATADIR}:/usr/ethereum
